fix alignment for money fields

--- a/assets/src/editor/events/tickets/editor-ticket/price-calculator/style.css
+++ b/assets/src/editor/events/tickets/editor-ticket/price-calculator/style.css
@@ -15,10 +15,6 @@
     padding: 1rem 0 0;
 }
 
-.ee-ticket-price-calculator-form-section .px-3 .ee-form-row-footer .col-sm-2:first-of-type {
-    text-align: right;
-}
-
 .ee-ticket-price-calculator-form-section h4 {
     color: #58575c;
     font-size: 1rem;
@@ -30,7 +26,6 @@
 .ee-ticket-price-calculator-form-section .ee-ticket-price-calculator-price label,
 .ee-ticket-price-calculator-form-section .ee-ticket-price-calculator-total label {
     line-height: 1.1;
-    text-align: right;
 }
 
 .ee-ticket-price-calculator-form-section .ee-ticket-price-calculator-total label {
@@ -42,7 +37,7 @@
 .ee-ticket-price-calculator-form-section .ee-ticket-price-calculator-price .ee-inline-edit-text {
     display: inline-block;
     font-size: 1.05rem;
-    padding: 0.375rem 0.75rem;
+    padding: 0.375rem 0;
 }
 
 .ee-ticket-price-calculator-form-section .ee-form-row-footer .ee-ticket-price-calculator-price {
@@ -52,7 +47,7 @@
 .ee-ticket-price-calculator-form-section .ee-form-row-footer .ee-ticket-price-calculator-price .ee-inline-edit-text {
     font-size: 1.2rem;
     line-height: 1.2;
-    padding: 0.375rem 0.75rem 0.375rem;
+    padding: 0.375rem 0;
 }
 
 .ee-ticket-price-calculator-form-section button {
